[package]
name = "aliri_actix"
description = "Actix for interacting with `aliri` authorities"
keywords = [ "actix", "jose", "jwt", "oauth2", "auth" ]
categories = [ "authentication", "web-programming", "web-programming::http-server" ]
version = "0.9.1"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoeinstein/aliri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
actix-rt = "2"
actix-web = { version = "4", default-features = false, features = ["macros"] }
aliri_base64 = { version = "0.1.0", path = "../aliri_base64" }
aliri_clock = { version = "0.1.0", path = "../aliri_clock" }
aliri_oauth2 = { version = "0.10.0", path = "../aliri_oauth2", features = [ "reqwest" ] }
color-eyre = "0.6"
regex = "1"
serde_json = "1"

[package.metadata.workspaces]
independent = true
