[package]
name = "aliri_oauth2"
description = "JWT authorization based on validating OAuth2 scopes"
keywords = [ "jose", "jwk", "jwt", "oauth2", "auth" ]
categories = [ "authentication" ]
version = "0.10.1"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoeinstein/aliri"

[features]
ec = [ "aliri/ec" ]
rsa = [ "aliri/rsa" ]
hmac = [ "aliri/hmac" ]
private-keys = [ "aliri/private-keys" ]
rustls-tls = [ "reqwest/rustls-tls" ]
default-tls = [ "reqwest/default-tls" ]
default = [ "rsa", "reqwest", "tokio" ]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
features = [ "rsa", "ec", "hmac", "private-keys", "reqwest" ]

[dependencies]

[dev-dependencies]
aliri = { version = "0.6.0", path = "../aliri", features = [ "private-keys" ] }
openssl = "0.10"
serde_json = "1"
tokio = { version = "1", features = [ "rt-multi-thread", "macros" ] }

[package.metadata.workspaces]
independent = true
