[package]
name = "aliri_reqwest"
description = "Background token management and renewal for reqwest based on best practices"
keywords = [ "reqwest", "jwt", "oauth2", "auth" ]
categories = [ "authentication" ]
version = "0.5.0"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2021"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoeinstein/aliri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
tokio = { version = "1", features = [ "macros", "time" ] }

[package.metadata.workspaces]
independent = true
