[package]
name = "aliri_tokens"
description = "Background token management and renewal based on best practices"
keywords = [ "jwt", "oauth2", "auth" ]
categories = [ "authentication" ]
version = "0.3.1"
authors = ["Marcus Griep <marcus@griep.us>"]
edition = "2018"
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/neoeinstein/aliri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["file", "oauth2", "rand"]
file = ["serde_json", "tokio/fs"]
oauth2 = ["reqwest"]

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]

[dependencies]

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
color-eyre = "0.6"
dotenvy = "0.15.7"
tracing-subscriber = { version = "0.3", features = [ "fmt", "env-filter" ] }
tokio = { version = "1", features = [ "rt-multi-thread", "macros" ] }
